# lemon-mlx-engine

./: .gitignore  CMakeLists.txt  README.md  SESSION_SUMMARY.md  benchmark_qmv_settings.sh  compare_qmv_settings.sh  comprehensive_qmv_comparison.sh  debug_layer0_reference.py  debug_numerical_trace.py  final_qmv_comparison.sh  fixed_qmv_comparison.sh  profile_both_engines.sh  test_lm_head_settings.sh  test_tiled_qmv_correctness.sh  verify_cols64_correctness.sh  verify_cols64_stability.sh
.github/workflows/: build-mlx-engine.yml  test-mlx-engine.yml
benchmarks/prompts/: qwen35_add_raw.py
examples/: bench.cpp  chat.cpp  diagnose.cpp  server.cpp  test_gdn_hip_parity.cpp
hipfire-gfx1151-opt/: CHANGELOG.md  CONTINUE_HERE.md  FUSION_ANALYSIS.md  GROUP256_SUMMARY.md  HANDOVER.md  LLAMACPP_BENCHMARK.md  LLAMACPP_MATCH_PLAN.md  NEXT_STEPS_QMV.md  OPTIMIZATION_STATUS.md  OPTIMIZATION_SUMMARY.md  PERF_COMPARISON_Q4_0.md  SESSION_LOG_2026-04-29.md  SESSION_SUMMARY_2026-04-30.md
patches/: apply_mlx_rocm_patches.sh  apply_qmv_group256.py  apply_rdna35_tile_n.py  mlx-rocm-gfx1151-disable-qmv-tiled.patch  mlx-rocm-gfx1151-qmv-cols64.patch  mlx-rocm-gfx1151-qmv-group256.patch  mlx-rocm-hipblaslt-debug-gate.patch  mlx-rocm-rdna35-tile-n8.patch  mlx-vulkan-group256.patch
scripts/: audit_model_artifacts.py  bench_qwen35_0p8b_vs_hipfire.sh  bench_qwen3_0p6b_vs_hipfire.sh  check_quant_forward_parity.sh  convert_group64_to_256.py  create_minimal_group256_test.py  dequantize_requantize_final.py  dequantize_requantize_mlx.py  optimize_tile_n.py  profile_quant_shapes.sh  quantize_qwen35_group256.py  quantize_qwen35_group256_v2.py  smoke_qwen35_0p8b_correctness.sh  smoke_qwen3_0p6b_correctness.sh  study_qmv_cols_gfx1151.sh  test_group256_kernel.py
src/common/: attention_utils.cpp  base_config.cpp  chat_session.cpp  chat_template.cpp  gated_delta.cpp  generate.cpp  hub_api.cpp  kv_cache.cpp  model_manager.cpp  quantize_utils.cpp  rope_utils.cpp  safetensors.cpp  server.cpp  ssm_utils.cpp  switch_layers.cpp  tokenizer.cpp  tool_calling.cpp
src/core/: module.cpp
src/embedders/: bert.cpp  embedder_factory.cpp  nomic_bert.cpp  pooling.cpp  qwen3_embed.cpp
tests/: CMakeLists.txt  test_chat_session.cpp  test_chat_template.cpp  test_config.cpp  test_generate.cpp  test_kv_cache.cpp  test_nemotron_h.cpp  test_rope_utils.cpp  test_server_api.cpp  test_tool_calling.cpp  test_types.cpp  test_user_input.cpp
(+183 files in other folders)
